# imagenet-as-a-service

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  noxfile.py  pyproject.toml
docker/: api.dockerfile
imagenet_service/: __init__.py  asgi.py  inference.py  main.py  utils.py
tests/: test_api.py  test_inference.py  test_utils.py  utils.py
